# deldot_revenue_forecast

./: .gitignore  pyproject.toml
External_Data/: 25aprtvt.xlsx  25augtvt.xlsx  25febtvt.xlsx  25jantvt.xlsx  25jultvt.xlsx  25juntvt.xlsx  25martvt.xlsx  25maytvt.xlsx  PET_PRI_GND_DCUS_NUS_M.xls
Model/: DelDot1.py  preprocess.py
ipynb/: randomforest.ipynb
my-react-app/: package-lock.json  package.json
my-react-app/src/: App.css  App.js
my-react-app/src/components/: DataPage.css  DataPage.js  Forecasting.css  Forecasting.js  Overview.css  Overview.js
preprocessing/: preprocessor.py  readme.md
preprocessing/tests/: preprocessor_test.py  utils_test.py
preprocessing/utils/: __init__.py  exception.py  load_data.py  save_to_file.py
